--- a/src/assets/scss/_lib/_settings.scss
+++ b/src/assets/scss/_lib/_settings.scss
@@ -10,14 +10,15 @@
 $grid-columns: 24;
 //$enable-flex: true;
 
-$basePath: './src';
+$basePath: './src/assets';
+
 $black: #000;
 $white: #fff;
 
 $primaryColor: #f7941d;
 $secondaryColor: #37caad;
 
-$imgPath: $basePath + '/assets/img/';
+$imgPath: $basePath + '/img/';
 $images-bxslider: $imgPath + 'bxslider';
 $icheck-img-path: $imgPath + 'icheck/flat/';
 
