Updated styles of people list, menu added

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -1,25 +1,58 @@
-/* .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  background: #F5F0DF;
+}
+.page-wrapper {
+  margin-top: 54px;
+  padding-top: 15px;
+  &.page-search, &.page-address-book {
+    margin-top: 129px;
+  }
+}
+header#header {
+  background: #ece7d2;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  .header-links {
+    a {
+      display: block;
+      padding: 15px;
+      text-align: center;
+      color: #d89c12;
+
+      text-decoration:none;
+      background-color: #F5F0DF; background-image: -webkit-gradient(linear, left top, left bottom, from(#F5F0DF), to(#D4CEBB));
+      background-image: -webkit-linear-gradient(top, #F5F0DF, #D4CEBB);
+      background-image: -moz-linear-gradient(top, #F5F0DF, #D4CEBB);
+      background-image: -ms-linear-gradient(top, #F5F0DF, #D4CEBB);
+      background-image: -o-linear-gradient(top, #F5F0DF, #D4CEBB);
+      background-image: linear-gradient(to bottom, #F5F0DF, #D4CEBB);
+      filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#F5F0DF, endColorstr=#D4CEBB);
+    }
+    .nav-item {
+      &::after {
+        content: "";
+        position: absolute;
+        height: 4px;
+        background: #69524a;
+        left: 0;
+        bottom: 0;
+        @include _transition(all 0.5s ease-in-out);
+      }
+      &:hover, &.active {
+        color: #69524a;
+        &::after {
+          right: 0;
+        }
+      }
+    }
+  }
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.people-list {
+  a.link-people {
+    text-decoration: none;
+    color: $black;
+  }
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-
-h2 {
-  color: #ddd;
-} */
