--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -17,6 +17,7 @@ body {
   font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
+  font-weight: $base-font-weight;
 }
 .page-wrapper {
   margin-top: 54px;
