[issue #8] made phone and email clickable, and [issue #1] updated styles for header and input boxes

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -17,6 +17,9 @@ header#header {
   top: 0;
   width: 100%;
   z-index: 99;
+  .bg-inverse {
+    background: $base-text-color;
+  }
   .header-links {
     a {
       display: block;
