Updated company and people list

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -97,6 +97,7 @@ body {
 .modal-full-page {
   .modal-backdrop {
     background: $white;
+    opacity: 1;
   }
   .modal-dialog {
     max-width: 100%;
