[issue #3] Updated user list view for user's more details

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -121,3 +121,10 @@ body {
     }
   }
 }
+.view-people {
+  >.row {
+    margin-top: 13px;
+    background: #f9f9f9;
+    box-shadow: 1px 1px 10px #ddd;
+  }
+}
