--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -128,6 +128,7 @@ body {
   >.row {
     cursor: default;
     margin-top: 10px;
+    padding: 15px 10px;
     background: #f9f9f9;
     box-shadow: 1px 1px 10px #ddd;
   }
