[#10] toggle added and updated calls

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -125,7 +125,10 @@ body {
   }
 }
 .view-people, .view-company {
-  >.row {
+  position: relative;
+  overflow: hidden;
+  display: none;
+  >.row-view {
     cursor: default;
     margin-top: 10px;
     padding: 15px 10px;
