--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -139,3 +139,8 @@ body {
   padding: .65rem 1rem;
   font-size: 1rem;
 }
+span.company {
+  padding-left: 20px;
+  color: grey;
+  font-size: 0.9em;
+}
