--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -24,7 +24,6 @@ body {
   padding-top: 15px;
 }
 .list-rows {
-
   >.row{
     border-top: 1px solid #eceeef;
     padding: 0.25rem;
@@ -38,6 +37,38 @@ body {
         position: absolute;
         top: 0.5px;
         right: 2px;
+      }
+    }
+  }
+}
+.auto-complete {
+  position: relative;
+  >div {
+    background: #fff;
+    position: absolute;
+    z-index: 9;
+    width: 100%;
+    height: 207px;
+    overflow: hidden;
+    top: 36px;
+    box-shadow: 1px 1px 10px 1px #ddd;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    >ul {
+      list-style: none;
+      margin: 0;
+      padding: 8px 5px;
+      height: 100%;
+      overflow: hidden;
+      overflow-y: scroll;
+      li {
+        padding: 2px 9px;
+        &:hover {
+          background: #ececec;
+          padding: 2px 9px;
+          border-radius: 3px;
+          box-shadow: 0px 0px 3px #ddd;
+        }
       }
     }
   }
