--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -63,11 +63,18 @@ body {
       overflow-y: scroll;
       li {
         padding: 2px 9px;
+        cursor: pointer;
         &:hover {
           background: #ececec;
           padding: 2px 9px;
           border-radius: 3px;
           box-shadow: 0px 0px 3px #ddd;
+        }
+        &.active-item {
+          background: $base-text-color;
+          color: #fff;
+          border-radius: 3px;
+          box-shadow: 0px 0px 3px $base-text-color;
         }
       }
     }
