--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -62,6 +62,14 @@ body {
     box-shadow: 1px 1px 10px 1px #ddd;
     border-radius: 5px;
     border: 1px solid #ddd;
+    &#search-lists-no-match {
+      height: auto;
+      overflow: hidden;
+      font-style: italic;
+      >ul {
+        overflow: hidden;
+      }
+    }
     >ul {
       list-style: none;
       margin: 0;
