--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -195,7 +195,8 @@ body {
 .view-people, .view-company {
   position: relative;
   overflow: hidden;
-  display: none;
+  height: 0 !important;
+  @include transition(all 0.5s ease-in-out);
   >.row-view {
     cursor: default;
     margin-top: 10px;
