--- a/src/assets/scss/_lib/bootstrap/_mixins.scss
+++ b/src/assets/scss/_lib/bootstrap/_mixins.scss
@@ -18,6 +18,7 @@
 @import "mixins/breakpoints";
 @import "mixins/hover";
 @import "mixins/image";
+@import "mixins/badge";
 @import "mixins/tag";
 @import "mixins/reset-filter";
 @import "mixins/resize";
