Updated/ removed unused packages, removed compilation script of styles, resolved warnings and errors

--- a/src/assets/scss/_lib/_settings.scss
+++ b/src/assets/scss/_lib/_settings.scss
@@ -6,7 +6,7 @@
 *
 */
 
-@import 'https://fonts.googleapis.com/css?family=Merriweather:300italic,300,400|Port+Lligat+Slab';
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300italic,300,400|Port+Lligat+Slab');
 
 /* Bootstrap */
 $grid-columns: 24;
